--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,8 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
-    "webpack": "^5.73.0"
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "webpack": "^5.74.0"
   }
 }
