--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,14 @@
     "bootstrap": "^5.2.0-beta1",
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
+    "gatsby": "^4.23.0",
+    "gatsby-background-image": "^1.6.0",
+    "gbimage-bridge": "^0.2.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-devtools": "^4.25.0",
     "react-dom": "^18.1.0",
+    "react-phone-number-input": "^3.2.11",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
