--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
     "react-validation": "^3.0.7",
-    "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.5.1",
-    "validator": "^13.7.0"
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
