--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
     "react-validation": "^3.0.7",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
