--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "path": "^0.12.7",
     "twilio": "^3.80.0",
     "uuid": "^9.0.0",
